--- a/FitTrack/Windows/AddWorkoutWindow.xaml
+++ b/FitTrack/Windows/AddWorkoutWindow.xaml
@@ -16,18 +16,26 @@
 
 
     <Grid>
-
+        <!-- Förklaring så att knappar osv, inte rör sig!-->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
         <!-- Titel -->
         <Label Content="Add a Workout" FontSize="30" FontWeight="Bold" 
-                       HorizontalAlignment="Center" Margin="0,198,0,291" Width="236" Height="45"/>
+                       HorizontalAlignment="Center" Margin="0,198,0,291" Width="236" Height="45" Grid.Column="0" Grid.Row="0"/>
 
         <!-- Välj typ av träningspass (Cardio eller Strength) -->
-        <ComboBox x:Name="WorkoutTypeComboBox" Width="200" Height="30" Margin="0,243,0,161" HorizontalAlignment="Center">
+        <ComboBox x:Name="WorkoutTypeComboBox" Width="200" Height="30" Margin="0,243,0,161" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="0">
             <ComboBoxItem Content="Cardio"/>
             <ComboBoxItem Content="Strength"/>
         </ComboBox>
-        <TextBlock HorizontalAlignment="Left" Margin="327,272,0,0" TextWrapping="Wrap" Text="Choose type of workout!" VerticalAlignment="Top" Height="16" Width="155" FontWeight="UltraBold"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,257,0,0" TextWrapping="Wrap" Text="Choose type of workout!" FontSize="15" VerticalAlignment="Top" Height="Auto" Width="Auto" FontWeight="UltraBold" Grid.Row="0"/>
 
 
 
@@ -40,20 +48,20 @@
         HorizontalAlignment="Center"
         Margin="0,357,0,0"
         VerticalAlignment="Top"
-        Click="DetailsBtn_Click" />
+        Click="DetailsBtn_Click" Grid.Column="0" Grid.Row="0"/>
 
-        <TextBox x:Name="WorkoutDetailsInput" Width="200" Height="30" Margin="66,292,0,112" HorizontalAlignment="Left" />
+        <TextBox x:Name="WorkoutDetailsInput" Width="200" Height="30" Margin="66,292,0,112" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="0" />
         <!-- Fält att beskriva träningen -->
-        <Label Content="Explain the workout!" FontSize="14" HorizontalAlignment="Left" Margin="98,308,0,191" Width="140" Height="30" FontWeight="UltraBold"/>
+        <Label x:Name="DistOrRepLABEL"  Content="Write the amount of Repetitions/Distance" FontSize="15" HorizontalAlignment="Left" Margin="10,314,0,190" Width="Auto" Height="30" FontWeight="UltraBold" Grid.Column="0" Grid.Row="0"/>
 
 
         <!-- Knappar för att cancela eller spara -->
-        <Button x:Name="SaveBtn" Content="Save Workout" Width="100" Height="30" HorizontalAlignment="Left" Margin="432,364,0,40" Background="#DC143C" Foreground="White"  Click="SaveBtn_Click"/>
-        <Button x:Name="CancelBtn" Content="Cancel" Width="100" Height="30" HorizontalAlignment="Left" Margin="245,364,0,40" Background="#DC143C" Foreground="White"  Click="CancelBtn_Click"/>
+        <Button x:Name="SaveBtn" Content="Save Workout" Width="100" Height="30" HorizontalAlignment="Left" Margin="432,364,0,40" Background="#DC143C" Foreground="White"  Click="SaveBtn_Click" Grid.Column="0" Grid.Row="0"/>
+        <Button x:Name="CancelBtn" Content="Cancel" Width="100" Height="30" HorizontalAlignment="Left" Margin="245,364,0,40" Background="#DC143C" Foreground="White"  Click="CancelBtn_Click" Grid.Column="0" Grid.Row="0"/>
 
 
-        <TextBox x:Name="WorkoutDescriptionInput" Width="200" Height="30"  Margin="530,292,70,112"/>
-        <TextBlock HorizontalAlignment="Left" Margin="530,313,0,0" TextWrapping="Wrap" Text="Pick a name for the workout!" VerticalAlignment="Top" Height="20" Width="200" FontWeight="UltraBold"/>
+        <TextBox x:Name="WorkoutDescriptionInput" Width="200" Height="30"  Margin="530,292,70,112" Grid.Column="0" Grid.Row="0"/>
+        <TextBlock HorizontalAlignment="Left" FontSize="15" Margin="530,322,0,0" TextWrapping="Wrap" Text="Pick a name for the workout!" VerticalAlignment="Top" Height="Auto" Width="Auto" FontWeight="UltraBold" Grid.Column="0" Grid.Row="0"/>
 
 
 
